# csv-generate-ids

./: Cargo.toml  README.md  data.csv
src/: README.md  main.rs
